# cisTEM

./: .autotools  .clang-format  .cproject  .devcontainer  .devcontainer.json  .gitattributes  .gitignore  .gitmodules  .project  .vscode  AUTHORS  CLAUDE.md  CMakeLists.txt  COPYING  Doxyfile  FFT_LICENSE_NOTE  Makefile  Makefile.in  NEWS  README  README.md  VERSION  additional_programs.m4  ax_cuda.m4  config.status  configure  configure.ac  database_layout.mwb  database_layout.mwb.bak  gmon.out  libtool  regenerate_containers.sh  regenerate_project.b  regenerate_vscode.sh  submodule_FastFFT.m4
ctffind_standalone/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  ctffind_prep_release.sh
ctffind_standalone/scripts/: ctffind_plot_results.sh
ctffind_standalone/src/: CMakeLists.txt  core
ctffind_standalone/src/programs/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  add_two_stacks  align_coordinates  append_stacks  apply_gain_ref  apply_mask  applyctf  binarize  cisTEM_job_control  combine_via_max  convert_eer_to_mrc  convert_tif_to_mrc  create_mask  divide_two_stacks  estimate_beamtilt  extract_particles  fft  gtk_suppress.txt  invert_hand  invert_stack  local_resolution_filter  mag_distortion_correct  make_orth_views  make_size_map  merge2d  montage  move_volume_xyz  multiply_two_stacks  niko_test  normalize_stack  print_stack_statistics  remove_inf_and_nan  remove_outlier_pixels  remove_relion_stripes  resample  reset_mrc_header  resize  (+5 more)
src/.deps/: ProjectX-AlignMoviesPanel.Po  ProjectX-ErrorDialog.Po  ProjectX-MainFrame.Po  ProjectX-MovieAssetPanel.Po  ProjectX-MovieImportDialog.Po  ProjectX-ProjectX_gui.Po  ProjectX-asset_group.Po  ProjectX-functions.Po  ProjectX-mathplot.Po  ProjectX-movie_asset.Po  ProjectX-projectx.Po
src/constants/: cistem_numbers.h  constants.h  electron_scattering.h  solvation.h
src/core/: CLAUDE.md  CMakeLists.txt  abstract_image_file.cpp  abstract_image_file.h  angles_and_shifts.cpp  angles_and_shifts.h  angular_distribution_histogram.cpp  angular_distribution_histogram.h  asset_group.cpp  asset_group.h  assets.cpp  assets.h  basic_star_file_reader.cpp  basic_star_file_reader.h  brute_force_search.cpp  brute_force_search.h  ccl3d.cpp  ccl3d.h  cistem_constants.h  cistem_parameters.cpp  cistem_parameters.cpp.orig  cistem_parameters.h  cistem_star_file_reader.cpp  cistem_star_file_reader.cpp.orig  cistem_star_file_reader.h  classification.cpp  classification.h  classification_selection.cpp  classification_selection.h  command_line_tools.cpp  command_line_tools.h  conjugate_gradient.cpp  conjugate_gradient.h  core_headers.h  ctf.cpp  ctf.h  curve.cpp  curve.h  database.cpp  database.h  (+124 more)
src/core/.deps/: cisTEM-particle_finder.Po  libcore_a-abstract_image_file.Po  libcore_a-angles_and_shifts.Po  libcore_a-angular_distribution_histogram.Po  libcore_a-asset_group.Po  libcore_a-assets.Po  libcore_a-basic_star_file_reader.Po  libcore_a-brute_force_search.Po  libcore_a-ccl3d.Po  libcore_a-cistem_parameters.Po  libcore_a-cistem_star_file_reader.Po  libcore_a-classification.Po  libcore_a-classification_selection.Po  libcore_a-conjugate_gradient.Po  libcore_a-ctf.Po  libcore_a-curve.Po  libcore_a-database.Po  libcore_a-dm_file.Po  libcore_a-downhill_simplex.Po  libcore_a-eer_file.Po  libcore_a-electron_dose.Po  libcore_a-empirical_distribution.Po  libcore_a-euler_search.Po  libcore_a-frealign_parameter_file.Po  libcore_a-functions.Po  libcore_a-globals.Po  libcore_a-image.Po  libcore_a-image_file.Po  libcore_a-job_packager.Po  libcore_a-job_tracker.Po  libcore_a-local_resolution_estimator.Po  libcore_a-matrix.Po  libcore_a-mrc_file.Po  libcore_a-mrc_header.Po  libcore_a-myapp.Po  libcore_a-numeric_text_file.Po  libcore_a-parameter_constraints.Po  libcore_a-particle.Po  libcore_a-particle_finder.Po  libcore_a-progressbar.Po  (+17 more)
src/core/dlib/: algs.h  array2d.h  config.h  geometry.h  matrix.h  memory_manager.h  optimization.h
src/core/json/: json_defs.h  jsonreader.cpp  jsonreader.h  jsonval.cpp  jsonval.h  jsonwriter.cpp  jsonwriter.h
src/core/sqlite/: sqlite3.h  sqlite3ext.h
src/core/tiff/: tiff.h  tiffio.h
src/dlib/: README.md
src/dlib/docs/: algorithms.html  api.html  bayes.html  books.html  change_log.html  cnn_face_detector.py.html  compile.html  compression.html  containers.html  correlation_tracker.py.html  dnn_dcgan_train_ex.cpp.html  dnn_inception_ex.cpp.html  dnn_instance_segmentation_ex.cpp.html  dnn_instance_segmentation_ex.h.html  dnn_instance_segmentation_train_ex.cpp.html  dnn_mmod_ex.cpp.html  (+57 more)
src/gpu/: .project  DeviceManager.cu  DeviceManager.h  GpuImage.cu  GpuImage.h  Histogram.cu  Histogram.h  Makefile  Makefile.template  TemplateMatchingCore.cu  TemplateMatchingCore.h  TensorManager.cu  TensorManager.h  gpu_core_headers.h  gpu_image_cuFFT_callbacks.h  gpu_indexing_functions.h  projection_queue.cuh  template_matching_empirical_distribution.cu  template_matching_empirical_distribution.h
src/gui/: AbInitio3DPanel.cpp  AbInitio3DPanel.h  AbInitioPlotPanel.cpp  AbInitioPlotPanel.h  ActionsPanelSpa.cpp  ActionsPanelSpa.h  ActionsPanelTm.cpp  ActionsPanelTm.h  AlignMoviesPanel.cpp  AlignMoviesPanel.h  AngularDistributionPlotPanel.cpp  AngularDistributionPlotPanel.h  AssetPanel.cpp  AssetPanel.h  AssetPickerComboPanel.cpp  AssetPickerComboPanel.h  AtomicCoordinatesAssetPanel.cpp  AtomicCoordinatesAssetPanel.h  AtomicCoordinatesChooserDialog.cpp  AtomicCoordinatesChooserDialog.h  AtomicCoordinatesImportDialog.cpp  AtomicCoordinatesImportDialog.h  AutoRefine3dPanel.cpp  AutoRefine3dPanel.h  BinningDialog.cpp  BinningDialog.h  BitmapPanel.cpp  BitmapPanel.h  CLAUDE.md  CMakeLists.txt  CTF1DPanel.cpp  CTF1DPanel.h  ClassificationPlotPanel.cpp  ClassificationPlotPanel.h  ClassumSelectionCopyFromDialog.cpp  ClassumSelectionCopyFromDialog.h  CombineRefinementPackagesDialog.cpp  CombineRefinementPackagesDialog.h  CombineRefinementPackagesWizard.cpp  CombineRefinementPackagesWizard.h  (+222 more)
src/programs/: CLAUDE.md  CMakeLists.txt
src/test/: unit_test_runner.cpp
(+1794 files in other folders)
